# expenses_analyzer

./: .gitignore  cospender_batch_recateg.json  cospender_pointwise_recateg.json  cozy_categories_remapping.json  craft_dataset.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
expense_analysis/: correction.py  tools.py  ui.py
